--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
     "@astrojs/tailwind": "^6.0.2",
     "@nanostores/react": "^1.0.0",
     "astro": "^5.16.1",
-    "buffer": "^6.0.3",
-    "gray-matter": "^4.0.3",
     "lucide-react": "^0.554.0",
     "nanostores": "^1.1.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-markdown": "^10.1.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
