--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,7 @@ name = "emilioharrison-com"
 pages_build_output_dir = "dist"
 compatibility_date = "2025-11-28"
 compatibility_flags = ["nodejs_compat"]
+
+[[kv_namespaces]]
+binding = "SESSION"
+id = "47c74c58b25e4147984b57d677370493"
