--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@keystatic/core": "^0.5.48",
     "@nanostores/react": "^1.0.0",
     "astro": "^5.16.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.554.0",
     "nanostores": "^1.1.0",
     "react": "^19.2.0",
