--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
-    "@astrojs/markdoc": "^0.15.9",
     "@astrojs/react": "^4.4.2",
-    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "@keystatic/astro": "^5.0.6",
     "@keystatic/core": "^0.5.48",
@@ -29,7 +27,9 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.6",
     "@eslint/js": "^9.39.1",
+    "@size-limit/file": "^12.0.0",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -37,13 +37,20 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
+    "depcheck": "^1.4.7",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.5.0",
+    "jscpd": "^4.0.5",
     "jsdom": "^27.2.0",
+    "knip": "^5.70.2",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "size-limit": "^12.0.0",
     "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.14",
     "wrangler": "^4.50.0"
   }
