--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@astrojs/markdoc": "^0.15.9",
     "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^6.0.2",
+    "@fontsource/archivo-black": "^5.2.8",
+    "@fontsource/dm-sans": "^5.2.8",
+    "@fontsource/space-grotesk": "^5.2.10",
     "@keystatic/astro": "^5.0.6",
     "@keystatic/core": "^0.5.48",
     "@nanostores/react": "^1.0.0",
