--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -11,7 +11,11 @@
     "lint": "eslint .",
     "test": "vitest",
     "test:e2e": "playwright test",
+    "check:safety": "npm run lint && npm run format && npx tsc --noEmit && npx astro check",
+    "check:hygiene": "npx knip && npx depcheck && npx jscpd src/",
+    "check:full": "npm run check:safety && npm run check:hygiene && npm run test && npm run scan",
     "sync": "git add . && git commit -m \"Auto-sync: $(date)\" && git push",
+
     "scan": "npm audit --audit-level=high",
     "format": "prettier --write .",
     "prepare": "husky"
