--- a/apps/recipes/tsconfig.json
+++ b/apps/recipes/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "allowJs": true
   }
 }
