--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,11 @@ dist-ssr
 .wrangler/
 
 # Playwright
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-/playwright/.auth/
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
+playwright/.auth/
 
 # Astro
 .astro/
@@ -44,3 +44,4 @@ coverage/
 # Build Artifacts
 audit-results/
 lint_output.txt
+prettier_error.txt
