--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -27,6 +27,7 @@
     "@fontsource/archivo-black": "^5.2.8",
     "@fontsource/dm-sans": "^5.2.8",
     "@fontsource/space-grotesk": "^5.2.10",
+    "@google/genai": "^1.34.0",
     "@nanostores/react": "^1.0.0",
     "astro": "^5.16.1",
     "class-variance-authority": "^0.7.1",
