--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -44,6 +44,9 @@
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.57.0",
     "@size-limit/file": "^12.0.0",
+    "@stryker-mutator/core": "^9.4.0",
+    "@stryker-mutator/typescript-checker": "^9.4.0",
+    "@stryker-mutator/vitest-runner": "^9.4.0",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -63,6 +66,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unused-imports": "^4.3.0",
+    "fast-check": "^4.5.2",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
