feat: Migrate Playwright tests to use Wrangler preview server on 127.0.0.1, remove in-test API mocks, and add a git commit unblock plan.

--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -8,6 +8,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "preview:wrangler": "wrangler pages dev dist --port 8788",
     "lint": "eslint .",
     "test": "vitest",
     "test:watch": "vitest watch",
