--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -48,6 +48,7 @@
     "nanostores": "^1.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
