feat: Add Cloudflare D1 database and R2 image storage integration with new API endpoints and deployment documentation.

--- a/apps/recipes/wrangler.toml
+++ b/apps/recipes/wrangler.toml
@@ -3,6 +3,16 @@ pages_build_output_dir = "dist"
 compatibility_date = "2025-08-01"
 compatibility_flags = ["nodejs_compat"]
 
+
 [[kv_namespaces]]
 binding = "SESSION"
 id = "47c74c58b25e4147984b57d677370493"
+
+[[d1_databases]]
+binding = "DB"
+database_name = "recipes-db"
+database_id = "b00b35b4-2269-4e5e-9269-3b1355e6ead7"
+
+[[r2_buckets]]
+binding = "BUCKET"
+bucket_name = "recipes-images"
