--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "nanostores": "^1.1.0",
     "react": "^19.2.0",
@@ -64,6 +65,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
