feat: Migrate data storage and file uploads from Cloudflare D1/R2 to Firebase.

--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,8 @@ reports/
 apps/recipes/docs/feedback/active-reports.md
 apps/recipes/docs/feedback/all-reports.md
 apps/recipes/docs/feedback/open-reports.md
-apps/recipes/docs/feedback/images/
+
+# Firebase
+firebase-service-account.json
+service-account.json
+
