--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -45,6 +45,8 @@
     "astro": "^5.16.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
