--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -69,6 +69,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/html2canvas": "^0.5.35",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -88,7 +89,7 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.4.0",
     "knip": "^5.70.2",
     "lint-staged": "^16.2.7",
     "npm-run-all": "^4.1.5",
