--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -43,6 +43,7 @@
     "@google/genai": "^1.34.0",
     "@nanostores/react": "^1.0.0",
     "astro": "^5.16.1",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
@@ -69,7 +70,6 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/html2canvas": "^0.5.35",
-    "@types/jsdom": "^27.0.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -89,7 +89,6 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
-    "jsdom": "^27.4.0",
     "knip": "^5.70.2",
     "lint-staged": "^16.2.7",
     "npm-run-all": "^4.1.5",
