--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -42,6 +42,7 @@
     "@fontsource/space-grotesk": "^5.2.10",
     "@google/genai": "^1.34.0",
     "@nanostores/react": "^1.0.0",
+    "@tanstack/react-virtual": "^3.13.13",
     "astro": "^5.16.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
