feat: Implement new UI components and design system with updated styling and tests.

--- a/apps/recipes/tsconfig.json
+++ b/apps/recipes/tsconfig.json
@@ -4,6 +4,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strictNullChecks": true,
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
