--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -42,6 +42,12 @@
     "@fontsource/space-grotesk": "^5.2.10",
     "@google/genai": "^1.34.0",
     "@nanostores/react": "^1.0.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-virtual": "^3.13.13",
     "astro": "^5.16.1",
     "cheerio": "^1.1.2",
@@ -54,7 +60,8 @@
     "nanostores": "^1.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
