--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@eslint/js": "^9.39.1",
+    "@google/generative-ai": "^0.24.1",
     "@playwright/test": "^1.57.0",
     "@size-limit/file": "^12.0.0",
     "@stryker-mutator/core": "^9.4.0",
@@ -100,6 +101,7 @@
     "jscpd": "^4.0.5",
     "knip": "^5.70.2",
     "lint-staged": "^16.2.7",
+    "msw": "^2.12.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
