--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-pdf/renderer": "^4.3.2",
     "@tanstack/react-virtual": "^3.13.13",
     "astro": "^5.16.1",
     "cheerio": "^1.1.2",
