--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -113,6 +113,7 @@
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^4.0.14",
     "wrangler": "^4.50.0"
   },
