--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -59,6 +59,7 @@
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
+    "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "nanostores": "^1.1.0",
