--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -60,6 +60,7 @@
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
     "fuse.js": "^7.1.0",
+    "heic2any": "^0.0.4",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "nanostores": "^1.1.0",
