--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -71,6 +71,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
+    "@cloudflare/workers-types": "^4.20260111.0",
     "@eslint/js": "^9.39.1",
     "@google/generative-ai": "^0.24.1",
     "@playwright/test": "^1.57.0",
