refactor(recipes): login api and manager cleanup, fix e2e tests & burger menu

--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -7,6 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "build:test": "PUBLIC_TEST_MODE=true astro build",
     "preview": "astro preview",
     "preview:wrangler": "wrangler pages dev dist --port 8788",
     "lint": "eslint --cache .",
@@ -50,7 +51,6 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-pdf/renderer": "^4.3.2",
-    "@tanstack/react-virtual": "^3.13.13",
     "astro": "^5.16.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
