--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -67,7 +67,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
@@ -87,6 +88,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/web-push": "^3.6.4",
     "@vitest/coverage-v8": "^4.0.16",
     "astro-eslint-parser": "^1.2.2",
     "autoprefixer": "^10.4.22",
