--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-pdf/renderer": "^4.3.2",
+    "@types/sharp": "^0.31.1",
     "astro": "^5.16.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
@@ -60,12 +61,14 @@
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
     "fuse.js": "^7.1.0",
+    "heic-convert": "^2.1.0",
     "heic2any": "^0.0.4",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "nanostores": "^1.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7"
