feat: Implement comprehensive recipe enhancement with structured steps, substeps, ingredient parsing, and step grouping, alongside an environment variable validation script.

--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -30,6 +30,7 @@
     "feedback:resolve": "npx tsx scripts/resolve-feedback.ts",
     "sync": "git add . && (git diff-index --quiet HEAD || git commit -m \"Auto-sync: $(date)\") && git push",
     "scan": "npm audit --audit-level=high",
+    "check:env": "npx tsx scripts/env-check.ts",
     "format": "prettier --write .",
     "prepare": "husky"
   },
