feat: Introduce email link sign-in, remove direct recipe creation from the UI, and add mobile-first UI design philosophy documentation.

--- a/apps/recipes/package.json
+++ b/apps/recipes/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "astro dev",
+    "go": "npm run check:env && npm run dev",
     "start": "astro dev",
     "build": "astro build",
     "build:test": "PUBLIC_TEST_MODE=true astro build",
